Added stuff for dockers

--- a/book/dockers-1.html
+++ b/book/dockers-1.html
@@ -101,7 +101,7 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
       <nav role="navigation">
 
 <ul class="summary">
-<li><a href="./">Hercules Exposome Research Center</a></li>
+<li><a href="./">Guest Lecture INFO 550</a></li>
 
 <li class="divider"></li>
 <li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> Computation In Research</a><ul>
