--- a/book/index.html
+++ b/book/index.html
@@ -101,7 +101,7 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
       <nav role="navigation">
 
 <ul class="summary">
-<li><a href="./">Hercules Exposome Research Center</a></li>
+<li><a href="./">Guest Lecture INFO 550</a></li>
 
 <li class="divider"></li>
 <li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> Computation In Research</a><ul>
@@ -150,20 +150,13 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <li class="chapter" data-level="2.5" data-path="virtualization.html"><a href="virtualization.html#getting-data-into-your-instance"><i class="fa fa-check"></i><b>2.5</b> Getting Data Into Your Instance</a></li>
 <li class="chapter" data-level="2.6" data-path="virtualization.html"><a href="virtualization.html#accessing-s3-from-ec2-instances"><i class="fa fa-check"></i><b>2.6</b> Accessing S3 from EC2 Instances</a></li>
 </ul></li>
-<li class="chapter" data-level="3" data-path="virtualization-1.html"><a href="virtualization-1.html"><i class="fa fa-check"></i><b>3</b> Virtualization</a><ul>
-<li class="chapter" data-level="3.1" data-path="virtualization-1.html"><a href="virtualization-1.html#virtual-box-1"><i class="fa fa-check"></i><b>3.1</b> Virtual Box</a></li>
-<li class="chapter" data-level="3.2" data-path="virtualization-1.html"><a href="virtualization-1.html#using-virtualization-farms-1"><i class="fa fa-check"></i><b>3.2</b> Using Virtualization Farms</a></li>
-<li class="chapter" data-level="3.3" data-path="virtualization-1.html"><a href="virtualization-1.html#running-rstudio-on-amazon-1"><i class="fa fa-check"></i><b>3.3</b> Running RStudio on Amazon</a><ul>
-<li class="chapter" data-level="3.3.1" data-path="virtualization-1.html"><a href="virtualization-1.html#why-ubuntu-1"><i class="fa fa-check"></i><b>3.3.1</b> Why Ubuntu ?</a></li>
-<li class="chapter" data-level="3.3.2" data-path="virtualization-1.html"><a href="virtualization-1.html#start-an-instance-1"><i class="fa fa-check"></i><b>3.3.2</b> Start An Instance</a></li>
-<li class="chapter" data-level="3.3.3" data-path="virtualization-1.html"><a href="virtualization-1.html#add-some-storage-1"><i class="fa fa-check"></i><b>3.3.3</b> Add Some Storage</a></li>
-<li class="chapter" data-level="3.3.4" data-path="virtualization-1.html"><a href="virtualization-1.html#get-a-key-1"><i class="fa fa-check"></i><b>3.3.4</b> Get A Key</a></li>
-<li class="chapter" data-level="3.3.5" data-path="virtualization-1.html"><a href="virtualization-1.html#installing-r-1"><i class="fa fa-check"></i><b>3.3.5</b> Installing R</a></li>
-<li class="chapter" data-level="3.3.6" data-path="virtualization-1.html"><a href="virtualization-1.html#installing-rstudio-server-1"><i class="fa fa-check"></i><b>3.3.6</b> Installing RStudio Server</a></li>
+<li class="chapter" data-level="3" data-path="dockers-1.html"><a href="dockers-1.html"><i class="fa fa-check"></i><b>3</b> Dockers</a><ul>
+<li class="chapter" data-level="3.1" data-path="dockers-1.html"><a href="dockers-1.html#scenarios"><i class="fa fa-check"></i><b>3.1</b> Scenarios</a></li>
+<li class="chapter" data-level="3.2" data-path="dockers-1.html"><a href="dockers-1.html#differences-from-vms"><i class="fa fa-check"></i><b>3.2</b> Differences From VMs</a></li>
+<li class="chapter" data-level="3.3" data-path="dockers-1.html"><a href="dockers-1.html#docker-terminology"><i class="fa fa-check"></i><b>3.3</b> Docker Terminology</a><ul>
+<li class="chapter" data-level="3.3.1" data-path="dockers-1.html"><a href="dockers-1.html#images"><i class="fa fa-check"></i><b>3.3.1</b> Images</a></li>
 </ul></li>
-<li class="chapter" data-level="3.4" data-path="virtualization-1.html"><a href="virtualization-1.html#accessing-your-instance-1"><i class="fa fa-check"></i><b>3.4</b> Accessing Your Instance</a></li>
-<li class="chapter" data-level="3.5" data-path="virtualization-1.html"><a href="virtualization-1.html#getting-data-into-your-instance-1"><i class="fa fa-check"></i><b>3.5</b> Getting Data Into Your Instance</a></li>
-<li class="chapter" data-level="3.6" data-path="virtualization-1.html"><a href="virtualization-1.html#accessing-s3-from-ec2-instances-1"><i class="fa fa-check"></i><b>3.6</b> Accessing S3 from EC2 Instances</a></li>
+<li class="chapter" data-level="3.4" data-path="dockers-1.html"><a href="dockers-1.html#rshiny"><i class="fa fa-check"></i><b>3.4</b> RShiny</a></li>
 </ul></li>
 <li class="divider"></li>
 <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
