added new stuff

--- a/book/twitter-social-media.html
+++ b/book/twitter-social-media.html
@@ -101,7 +101,7 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
       <nav role="navigation">
 
 <ul class="summary">
-<li><a href="./">Guest Lecture INFO 550</a></li>
+<li><a href="./">Guest Lecture Nursing School</a></li>
 
 <li class="divider"></li>
 <li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> Computation In Research</a><ul>
@@ -181,13 +181,12 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <li class="chapter" data-level="4.8" data-path="text-mining.html"><a href="text-mining.html#term-frequency"><i class="fa fa-check"></i><b>4.8</b> Term Frequency</a><ul>
 <li class="chapter" data-level="4.8.1" data-path="text-mining.html"><a href="text-mining.html#back-to-the-speeches"><i class="fa fa-check"></i><b>4.8.1</b> Back To The Speeches</a></li>
 </ul></li>
-<li class="chapter" data-level="4.9" data-path="text-mining.html"><a href="text-mining.html#n-grams"><i class="fa fa-check"></i><b>4.9</b> N Grams</a></li>
-<li class="chapter" data-level="4.10" data-path="text-mining.html"><a href="text-mining.html#tf-and-idf"><i class="fa fa-check"></i><b>4.10</b> Tf and Idf</a></li>
-<li class="chapter" data-level="4.11" data-path="text-mining.html"><a href="text-mining.html#sentiment"><i class="fa fa-check"></i><b>4.11</b> Sentiment</a><ul>
-<li class="chapter" data-level="4.11.1" data-path="text-mining.html"><a href="text-mining.html#sentiment-dictionaries-and-lexicons"><i class="fa fa-check"></i><b>4.11.1</b> Sentiment Dictionaries and Lexicons</a></li>
-<li class="chapter" data-level="4.11.2" data-path="text-mining.html"><a href="text-mining.html#an-example"><i class="fa fa-check"></i><b>4.11.2</b> An Example</a></li>
-<li class="chapter" data-level="4.11.3" data-path="text-mining.html"><a href="text-mining.html#speech-sentiment"><i class="fa fa-check"></i><b>4.11.3</b> Speech Sentiment</a></li>
-<li class="chapter" data-level="4.11.4" data-path="text-mining.html"><a href="text-mining.html#comparison-cloud"><i class="fa fa-check"></i><b>4.11.4</b> Comparison Cloud</a></li>
+<li class="chapter" data-level="4.9" data-path="text-mining.html"><a href="text-mining.html#tf-and-idf"><i class="fa fa-check"></i><b>4.9</b> Tf and Idf</a></li>
+<li class="chapter" data-level="4.10" data-path="text-mining.html"><a href="text-mining.html#sentiment"><i class="fa fa-check"></i><b>4.10</b> Sentiment</a><ul>
+<li class="chapter" data-level="4.10.1" data-path="text-mining.html"><a href="text-mining.html#sentiment-dictionaries-and-lexicons"><i class="fa fa-check"></i><b>4.10.1</b> Sentiment Dictionaries and Lexicons</a></li>
+<li class="chapter" data-level="4.10.2" data-path="text-mining.html"><a href="text-mining.html#an-example"><i class="fa fa-check"></i><b>4.10.2</b> An Example</a></li>
+<li class="chapter" data-level="4.10.3" data-path="text-mining.html"><a href="text-mining.html#speech-sentiment"><i class="fa fa-check"></i><b>4.10.3</b> Speech Sentiment</a></li>
+<li class="chapter" data-level="4.10.4" data-path="text-mining.html"><a href="text-mining.html#comparison-cloud"><i class="fa fa-check"></i><b>4.10.4</b> Comparison Cloud</a></li>
 </ul></li>
 </ul></li>
 <li class="chapter" data-level="5" data-path="twitter-social-media.html"><a href="twitter-social-media.html"><i class="fa fa-check"></i><b>5</b> Twitter - Social Media</a><ul>
@@ -779,7 +778,7 @@ gitbook.start({
 "link": null,
 "text": null
 },
-"download": ["Nursing Report.pdf", "Nursing Report.epub"],
+"download": ["Research Computing.pdf", "Research Computing.epub"],
 "toc": {
 "collapse": "subsection"
 }
