--- a/book/twitter-social-media.html
+++ b/book/twitter-social-media.html
@@ -712,7 +712,14 @@ copd_bi_words_counts &lt;-<span class="st"> </span>bi_copd_tweets_filtered <span
              <span class="dt">subtitle =</span> <span class="st">&quot;Text mining twitter data &quot;</span>,
              <span class="dt">x =</span> <span class="st">&quot;&quot;</span>, <span class="dt">y =</span> <span class="st">&quot;&quot;</span>)</code></pre></div>
 <center>
+<div class="figure">
 <img src="PICS/network.png" />
+
+</div>
+<div class="figure">
+<img src="PICS/ensif.png" />
+
+</div>
 </center>
 
 </div>
